<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activites.register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_register_full_name"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_register_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_register_full_name"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewName"
...
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_register_email"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_register_email"
                        android:layout_marginTop="10dp"                android:textColor="@color/black"

                        android:layout_marginBottom="10dp"
...
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_register_dob"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_register_dob"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_register_dob"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewDoB"
...
                            android:layout_height="wrap_content"
                            android:text="Female"                android:textColor="@color/black"

                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="Male"                android:textColor="@color/black"

                            android:textSize="16sp" />
...
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_register_mobile"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_register_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_register_mobile"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/imageViewMobile"
...
                        android:layout_height="1dp"
                        android:layout_below="@id/textView_register_password"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editText_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_register_password"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"                android:textColor="@color/black"

...
                    android:layout_centerVertical="true"
                    android:elevation="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="180dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/register"
...
